# mlx-audiocraft

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
openspec/: HANDOFF.md  config.yaml
openspec/changes/define-musicgen-architecture/: design.md  proposal.md  tasks.md
openspec/changes/define-musicgen-architecture/specs/musicgen-runtime/: spec.md
openspec/changes/define-musicgen-architecture/specs/musicgen-weight-conversion/: spec.md
src/mlx_audiocraft/: __init__.py  _musicgen.py
src/mlx_audiocraft/musicgen/: __init__.py  checkpoint.py  config.py  errors.py
tests/: __init__.py  test_import.py  test_musicgen_loading.py
